Jumbo furnace item plays place-the-block sound when placing the block